# flask-serverless

./: .gitignore  Makefile  README.md  distrochart.css  distrochart.js  going-serverless.html  scale-out.idraw  setup.cfg  setup.cfg.sh  test_aws.py
flask_serverless/: __init__.py  aws_lambda.py  gcp_function.py
test/: gcp_main.py  pyproject.toml  setup.cfg
test/app/: __init__.py  __main__.py  app.py
