[metadata]
name = flask_serverless
version = 1.0.0
author = Alex Miłowski
author_email = alex@milowski.com
description = A flask serverless integration
license = Apache License 2.0
url = https://github.com/alexmilowski/flask-serverless

[options]
packages =
   flask_serverless
include_package_data = True
install_requires =
	flask
	requests

[options.package_data]
* = *.json, *.yaml

