[metadata]
name = app
version = 1.0.0
author = Alex Miłowski
author_email = alex@milowski.com
description = A test application
license = Apache License 2.0
url = https://github.com/alexmilowski/flask-serverless

[options]
packages =
   app
include_package_data = True
install_requires =

[options.package_data]
* = *.json, *.yaml
